# ipc-chan

./: Cargo.toml  ipc-channel.toml
src/: config.rs  error.rs  lib.rs
