[package]
name = "ipc-channel"
version = "0.1.0"
authors = ["Joey Ezechiels <joey.ezechiels@gmail.com>"]
edition = "2018"
description = "An IPC-capable channel with an API akin to `std::sync::mpsc::channel`."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
zmq = "0.9"
